--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -7,7 +7,7 @@
 </head>
 <body >
     <center>
-        <img src="./img.avif" alt="Imagen guardad localmente" width="200px">
+        <img src="https://cdn.pixabay.com/photo/2018/04/18/18/56/user-3331256_1280.png" alt="" width="200px">
    
      <table>
          <tr>
