--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <tr>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio1.html" target="_blank"><img width="200px" src="./imagen1.png"></a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img width="200px" src="./screenCV.png"</a></td>
-        <td style="width: 200px; color:rgb(8, 66, 47);"> Proximo proyecto</td>
-        
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img width="200px" src="./imagen1.png"</a></td>        
     </tr>
     <tr>
         <td style="color: rgb(39, 78, 65); text-align: center;">Este ejecicion es para el inicio de seccion </td>
