--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <tr>
         <td style="color: rgb(39, 78, 65); text-align: center;">Este ejecicion es para el inicio de seccion </td>
         <td style="color: rgb(39, 78, 65); text-align: center;">En este ejercicio es para crear hojas de vidas utlizando html y css</td>
+        <td style="color: rgb(39, 78, 65); text-align: center;">En este un copia del dieño del instagram de natgeo</td>
     </tr>
    </table>
 
