--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 style="color: aquamarine;" align="center">Bienvenido a mi Portafolio</h1>
     </header>
 
-   <table border="1" style="width:600px;" border-color="aquamarine; width 600px" align="center">
+   <table  style="width:600px;" border-color="aquamarine; width 600px" align="center">
     <tr>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio1.html" target="_blank"><img width="200px" src="./imagen1.png"></a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img width="200px" src="./screenCV.png"</a></td>
