--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./index.css">
     <title>Mi Portafolio</title>
 </head>
-<body style="background-color: aliceblue;">
+<body style="background-color: rgb(41, 73, 62);">
     <header>
         <h1 style="color: aquamarine;" align="center">Bienvenido a mi Portafolio</h1>
     </header>
@@ -15,7 +15,7 @@
     <tr>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio1.html" target="_blank"><img width="200px" src="./imagen1.png"></a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img width="200px" src="./screenCV.png"</a></td>
-        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img width="200px" src="./natgeo.png"</a></td>        
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="370px" width="200px" src="./natgeo.png"</a></td>        
     </tr>
     <tr>
         <td style="color: rgb(39, 78, 65); text-align: center;">Este ejecicion es para el inicio de seccion </td>
