--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
    <table  style="width:600px;" border-color="aquamarine; width 600px" align="center">
     <tr>
-        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio1.html" target="_blank"><img width="200px" src="./imagen1.png"></a></td>
-        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img width="200px" src="./screenCV.png"</a></td>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio1.html" target="_blank"><img height="350px" width="200px" src="./imagen1.png"></a></td>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img height="350px" width="200px" src="./screenCV.png"</a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="350px" width="200px" src="./natgeo.png"</a></td>        
     </tr>
     <tr>
