--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="350px" width="200px" src="./natgeo.png"</a></td>        
     </tr>
     <tr>
-        <td style="color: rgb(39, 78, 65); text-align: center;">Este ejecicion es para el inicio de seccion </td>
-        <td style="color: rgb(39, 78, 65); text-align: center;">En este ejercicio es para crear hojas de vidas utlizando html y css</td>
-        <td style="color: rgb(39, 78, 65); text-align: center;">En este un copia del dieño del instagram de natgeo</td>
+        <td style="color: white; text-align: center;">Este ejecicion es para el inicio de seccion </td>
+        <td style="color: white; text-align: center;">En este ejercicio es para crear hojas de vidas utlizando html y css</td>
+        <td style="color: white; text-align: center;">En este un copia del dieño del instagram de natgeo</td>
     </tr>
    </table>
 
