--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img height="350px" width="200px" src="./screenCV.png"</a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="350px" width="200px" src="./natgeo.png"</a></td>        
     </tr>
+    
     <tr>
-        <td style="color: white; text-align: center;">Este ejecicion es para el inicio de seccion </td>
+        <td style="color: white; text-align: center;">Este ejercicio es para el inicio de seccion </td>
         <td style="color: white; text-align: center;">En este ejercicio es para crear hojas de vidas utlizando html y css</td>
         <td style="color: white; text-align: center;">En este un copia del dieño del instagram de natgeo</td>
+    </tr>
+    <tr>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ToursVivaMedellin" target="_blank"><img height="350px" width="200px" src="./paginaweb.png"></a></td>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio2.html" target="_blank"><img height="350px" width="200px" src="#"</a></td>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="350px" width="200px" src="#"</a></td>        
+    </tr>
+    
+    <tr>
+        <td style="color: white; text-align: center;">Esta es la pagina del filtro HTML y CSS </td>
+        <td style="color: white; text-align: center;">siguiente proyecto</td>s
+        <td style="color: white; text-align: center;">siguiente proyecto</td>
     </tr>
    </table>
 
