--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <tr>
         <td style="color: white; text-align: center;">Esta es la pagina del filtro HTML y CSS </td>
-        <td style="color: white; text-align: center;">siguiente proyecto</td>s
+        <td style="color: white; text-align: center;">Datos a traves de form y mostar por pantalla</td>s
         <td style="color: white; text-align: center;">siguiente proyecto</td>
     </tr>
    </table>
