--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </tr>
     <tr>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ToursVivaMedellin" target="_blank"><img height="350px" width="200px" src="./paginaweb.png"></a></td>
-        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/form-clase4js/" target="_blank"><img height="350px" width="200px" src="./formulario.png"</a></td>
+        <td><a href="https://barrazastewin.github.io/ejercicios-riwi/form-clase4js/" target="_blank"><img height="350px" width="200px" src="./formlario.png"</a></td>
         <td><a href="https://barrazastewin.github.io/ejercicios-riwi/ejercicio3.html" target="_blank"><img height="350px" width="200px" src="#"</a></td>        
     </tr>
     
